# KnapSaC-lib

./: Cargo.toml
src/: dependency.rs  entry.rs  error.rs  executable.rs  language.rs  lib.rs  manifest.rs  module.rs  package.rs  package_manifest.rs  registry.rs  utils.rs  version.rs
src/executable/: add.rs  get.rs  mod.rs  remove.rs
src/module/: add.rs  get.rs  manifest.rs  mod.rs  package_module.rs  remove.rs  standalone_module.rs
src/registry/: add.rs  get.rs  has.rs  mark.rs  mod.rs  package.rs  remove.rs  search.rs
