[package]
name = "knapsac_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#git2 = "0.14.4"
#url = { version = "2.2", features = ["serde"] }
#nanoid = "0.4.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
dirs = "4.0.0"
